--- a/alacritty.yml
+++ b/alacritty.yml
@@ -111,8 +111,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: FantasqueSansMono NF
-
+    family: JetBrainsMono NF
     # The `style` can be specified to pick a specific face.
     #style: Regular
 
@@ -122,10 +121,10 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FantasqueSansMono NF
+    family: JetBrainsMono NF
 
     # The `style` can be specified to pick a specific face.
-    style: Bold
+    style: Extra Bold
 
   # Italic font face
   italic:
@@ -133,7 +132,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FantasqueSansMono NF
+    family: JetBrainsMono NF
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -144,13 +143,13 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FantasqueSansMono NF
+    family: JetBrainsMono NF
 
     # The `style` can be specified to pick a specific face.
-    style: Bold Italic
+    style: Extra Bold Italic
 
   # Point size
-  size: 15.0
+  size: 13.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
