--- a/colors.yml
+++ b/colors.yml
@@ -32,6 +32,27 @@ schemes:
     - { index: 16, color: '#ff9e64' }
     - { index: 17, color: '#db4b4b' }
     
+
+# Colors (One Dark - https://github.com/atom/atom/tree/master/packages/one-dark-syntax)
+  onedark: &onedark
+    primary:
+      background: '#282c34'
+      foreground: '#abb2bf'
+    cursor:
+      text:       CellBackground
+      cursor:     '#528bff' # syntax-cursor-color
+    selection:
+      text:       CellForeground
+      background: '#3e4451' # syntax-selection-color
+    normal:
+      black:      '#5c6370' # mono-3
+      red:        '#e06c75' # red 1
+      green:      '#98c379'
+      yellow:     '#e5c07b' # orange 2
+      blue:       '#61afef'
+      magenta:    '#c678dd'
+      cyan:       '#56b6c2'
+      white:      '#828997' # mono-2
   dracula: &dracula
     primary:
       background: '#282a36'
@@ -59,4 +80,4 @@ schemes:
       cyan:    '#9aedfe'
       white:   '#e6e6e6' 
 
-colors: *dracula
+colors: *onedark
