--- a/alacritty.yml
+++ b/alacritty.yml
@@ -111,7 +111,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: JetBrainsMono NF
+    family: FiraMono Nerd Font
     # The `style` can be specified to pick a specific face.
 
   # Bold font face
@@ -120,10 +120,10 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: JetBrainsMono NF
+    family: FiraMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
-    style: Extra Bold
+    style: Bold
 
   # Italic font face
   italic:
@@ -131,7 +131,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: JetBrainsMono NF
+    family: FiraMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -142,13 +142,13 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: JetBrainsMono NF
+    family: FiraMono Nerd Font
 
     # The `style` can be specified to pick a specific face.
-    style: Extra Bold Italic
+    style: Bold Italic
 
   # Point size
-  size: 16.0
+  size: 15.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
