--- a/alacritty.yml
+++ b/alacritty.yml
@@ -111,7 +111,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: FiraCode Nerd Font
+    family: FiraCode NF
     # The `style` can be specified to pick a specific face.
     style: Retina
 
@@ -121,29 +121,29 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FiraCode Nerd Font
+    family: FiraCode NF
 
     # The `style` can be specified to pick a specific face.
     style: Bold
 
   # Italic font face
-  italic:
+  italics:
     # Font family
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FiraCode Nerd Font
+    family: FiraCode NF
 
     # The `style` can be specified to pick a specific face.
     style: Italic
 
   # Bold italic font face
-  bold_italic:
+  bold_italics:
     # Font family
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FiraCode Nerd Font
+    family: FiraCode NF
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
