--- a/alacritty.yml
+++ b/alacritty.yml
@@ -124,10 +124,10 @@ font:
     family: FiraCode NF
 
     # The `style` can be specified to pick a specific face.
-    style: Bold
+    # style: Bold
 
   # Italic font face
-  italics:
+  italic:
     # Font family
     #
     # If the italic family is not specified, it will fall back to the
@@ -135,7 +135,7 @@ font:
     family: FiraCode NF
 
     # The `style` can be specified to pick a specific face.
-    style: Italic
+    # style: 
 
   # Bold italic font face
   bold_italics:
@@ -146,7 +146,7 @@ font:
     family: FiraCode NF
 
     # The `style` can be specified to pick a specific face.
-    style: Bold Italic
+    # style: Bold Italic
 
   # Point size
   size: 15.0
