--- a/kitty.conf
+++ b/kitty.conf
@@ -6,10 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code Regular Nerd Font Complete
-bold_font        Fira Code Bold Nerd Font Mono Complete
-italic_font      Fira Code Italic Nerd Font Complete
-bold_italic_font Fira Code Bold Italic Nerd Font Complete
+font_family      FuraCode Regular Nerd Font Complete
+bold_font        FuraCode Bold Nerd Font Mono Complete
+italic_font      FuraCode Italic Nerd Font Complete
+bold_italic_font FuraCode Bold Italic Nerd Font Complete
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
