--- a/polybar/config
+++ b/polybar/config
@@ -29,9 +29,9 @@ alert = #bd2c40
 
 [bar/mybar]
 ;monitor = ${env:MONITOR:HDMI-1}
-width = 95%
+width = 100%
 height = 26
-offset-x = 2.5%
+; offset-x = 2.5%
 ;offset-y = 1%
 radius = 6.0
 fixed-center = false
