--- a/polybar/config
+++ b/polybar/config
@@ -15,17 +15,33 @@
 ;   The README contains a lot of information
 ;
 ;==========================================================
-
 [colors]
 ;background = ${xrdb:color0:#222}
-background = #222
-background-alt = #444
+background = #1a1b26
+background-alt = #414868
 ;foreground = ${xrdb:color7:#222}
-foreground = #dfdfdf
-foreground-alt = #555
+foreground = #c0caf5
+foreground-alt = #a9b1d6
 primary = #ffb52a
 secondary = #e60053
 alert = #bd2c40
+
+[tokyo]
+background = #1a1b26
+background-alt = #414868
+foreground = #c0caf5
+foreground-alt = #a9b1d6
+primary = #e0af68
+secondary = #f7768e
+alert = #f7768e
+;; UserDefined
+red = #f7768e
+purple = #9f78e1
+cyan = #7dcfff
+green = #9ece6a
+blue = #7aa2f7 
+orange = #ff9e64
+yellow = #e0af68
 
 [bar/mybar]
 ;monitor = ${env:MONITOR:HDMI-1}
@@ -36,11 +52,11 @@ height = 26
 radius = 6.0
 fixed-center = false
 
-background = ${colors.background}
-foreground = ${colors.foreground}
+background = ${tokyo.background}
+foreground = ${tokyo.foreground}
 
 line-size = 2
-line-color = #f00
+line-color = ${tokyo.red}
 
 border-size = 2
 border-color = #00000000
@@ -87,16 +103,16 @@ type = internal/xkeyboard
 blacklist-0 = num lock
 
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-prefix-underline = ${colors.secondary}
+format-prefix-foreground = ${tokyo.foreground-alt}
+format-prefix-underline = ${tokyo.secondary}
 
 label-layout = %layout%
-label-layout-underline = ${colors.secondary}
+label-layout-underline = ${tokyo.secondary}
 
 label-indicator-padding = 2
 label-indicator-margin = 1
-label-indicator-background = ${colors.secondary}
-label-indicator-underline = ${colors.secondary}
+label-indicator-background = ${tokyo.secondary}
+label-indicator-underline = ${tokyo.secondary}
 
 [module/filesystem]
 type = internal/fs
@@ -106,25 +122,25 @@ mount-0 = /
 
 label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
-label-unmounted-foreground = ${colors.foreground-alt}
+label-unmounted-foreground = ${tokyo.foreground-alt}
 
 [module/bspwm]
 type = internal/bspwm
 
 label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
+label-focused-background = ${tokyo.background-alt}
+label-focused-underline= ${tokyo.primary}
 label-focused-padding = 2
 
 label-occupied = %index%
 label-occupied-padding = 2
 
 label-urgent = %index%!
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${tokyo.alert}
 label-urgent-padding = 2
 
 label-empty = %index%
-label-empty-foreground = ${colors.foreground-alt}
+label-empty-foreground = ${tokyo.foreground-alt}
 label-empty-padding = 2
 
 ; Separator in between workspaces
@@ -141,12 +157,12 @@ wrapping-scroll = false
 
 label-mode-padding = 2
 label-mode-foreground = #000
-label-mode-background = ${colors.primary}
+label-mode-background = ${tokyo.primary}
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
-label-focused-background = ${colors.background-alt}
-label-focused-underline= ${colors.primary}
+label-focused-background = ${tokyo.background-alt}
+label-focused-underline= ${tokyo.primary}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
@@ -161,7 +177,7 @@ label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %index%
-label-urgent-background = ${colors.alert}
+label-urgent-background = ${tokyo.alert}
 label-urgent-padding = 2
 
 ; Separator in between workspaces
@@ -193,10 +209,10 @@ bar-indicator-foreground = #fff
 bar-indicator-font = 2
 bar-fill = ─
 bar-fill-font = 2
-bar-fill-foreground = #9f78e1
+bar-fill-foreground = ${tokyo.purple}
 bar-empty = ─
 bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
+bar-empty-foreground = ${tokyo.foreground-alt}
 
 [module/backlight-acpi]
 inherit = module/xbacklight
@@ -207,16 +223,16 @@ card = intel_backlight
 type = internal/cpu
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #f90000
+format-prefix-foreground = ${tokyo.foreground-alt}
+format-underline = ${tokyo.purple}
 label = %percentage:2%%
 
 [module/memory]
 type = internal/memory
 interval = 2
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #4bffdc
+format-prefix-foreground = ${tokyo.foreground-alt}
+format-underline = ${tokyo.cyan}
 label = %percentage_used%%
 
 [module/wlan]
@@ -225,21 +241,21 @@ interface = wlan2
 interval = 3.0
 
 format-connected = <ramp-signal> <label-connected>
-format-connected-underline = #9f78e1
+format-connected-underline = ${tokyo.purle}
 label-connected = %essid%
 
 format-disconnected =
 ;format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
 ;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+;label-disconnected-foreground = ${tokyo.foreground-alt}
 
 ramp-signal-0 = 
 ramp-signal-1 = 
 ramp-signal-2 = 
 ramp-signal-3 = 
 ramp-signal-4 = 
-ramp-signal-foreground = ${colors.foreground-alt}
+ramp-signal-foreground = ${tokyo.foreground-alt}
 
 [module/eth]
 type = internal/network
@@ -247,16 +263,16 @@ format-prefix = "歷 "
 interface = "enp2s0"
 interval = 3.0
 
-format-connected-underline = #55aa55
+format-connected-underline = ${tokyo.green}
 format-connected-prefix = "ﯲ "
-format-connected-prefix-foreground = ${colors.foreground-alt}
+format-connected-prefix-foreground = ${tokyo.foreground-alt}
 label-connected = %local_ip%
 
 format-disconnected = " "
 ;format-disconnected = <label-disconnected>
 ;format-disconnected-underline = ${self.format-connected-underline}
 label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
+;label-disconnected-foreground = ${tokyo.foreground-alt}
 
 [module/date]
 type = internal/date
@@ -269,8 +285,8 @@ time = %H:%M
 time-alt = %H:%M:%S
 
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
-format-underline = #0a6cf5
+format-prefix-foreground = ${tokyo.foreground-alt}
+format-underline = ${tokyo.blue}
 
 label = %date% %time%
 
@@ -282,24 +298,24 @@ label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
 label-muted = 🔇 muted
-label-muted-foreground = #666
+label-muted-foreground = ${tokyo.foreground-alt}
 
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
+bar-volume-width = 9
+bar-volume-foreground-0 = ${tokyo.green}
+bar-volume-foreground-1 = ${tokyo.green}
+bar-volume-foreground-2 = ${tokyo.green}
+bar-volume-foreground-3 = ${tokyo.green}
+bar-volume-foreground-4 = ${tokyo.green}
+bar-volume-foreground-5 = ${tokyo.orange}
+bar-volume-foreground-6 = ${tokyo.red}
+bar-volume-gradient = true
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
 bar-volume-fill = ─
 bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+bar-volume-empty-foreground = ${tokyo.foreground-alt}
 
 [module/alsa]
 type = internal/alsa
@@ -309,17 +325,17 @@ label-volume = VOL %percentage%%
 label-volume-foreground = ${root.foreground}
 
 format-muted-prefix = 🔇
-format-muted-foreground = ${colors.foreground-alt}
+format-muted-foreground = ${tokyo.foreground-alt}
 label-muted = sound muted
 
 bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
+bar-volume-foreground-0 = ${tokyo.green}
+bar-volume-foreground-1 = ${tokyo.green}
+bar-volume-foreground-2 = ${tokyo.green}
+bar-volume-foreground-3 = ${tokyo.green}
+bar-volume-foreground-4 = ${tokyo.green}
+bar-volume-foreground-5 = ${tokyo.orange}
+bar-volume-foreground-6 = ${tokyo.red}
 bar-volume-gradient = false
 bar-volume-indicator = |
 bar-volume-indicator-font = 2
@@ -327,7 +343,7 @@ bar-volume-fill = ─
 bar-volume-fill-font = 2
 bar-volume-empty = ─
 bar-volume-empty-font = 2
-bar-volume-empty-foreground = ${colors.foreground-alt}
+bar-volume-empty-foreground = ${tokyo.foreground-alt}
 
 [module/battery]
 type = internal/battery
@@ -336,30 +352,30 @@ adapter = AC
 full-at = 98
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
+format-charging-underline = ${tokyo.yellow}
 
 format-discharging = <animation-discharging> <label-discharging>
 format-discharging-underline = ${self.format-charging-underline}
 
 format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground-alt}
+format-full-prefix-foreground = ${tokyo.foreground-alt}
 format-full-underline = ${self.format-charging-underline}
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
-ramp-capacity-foreground = ${colors.foreground-alt}
+ramp-capacity-foreground = ${tokyo.foreground-alt}
 
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
-animation-charging-foreground = ${colors.foreground-alt}
+animation-charging-foreground = ${tokyo.foreground-alt}
 animation-charging-framerate = 750
 
 animation-discharging-0 = 
 animation-discharging-1 = 
 animation-discharging-2 = 
-animation-discharging-foreground = ${colors.foreground-alt}
+animation-discharging-foreground = ${tokyo.foreground-alt}
 animation-discharging-framerate = 750
 
 [module/temperature]
@@ -368,18 +384,18 @@ thermal-zone = 0
 warn-temperature = 60
 
 format = <ramp> <label>
-format-underline = #f50a4d
+format-underline = ${tokyo.red}
 format-warn = <ramp> <label-warn>
 format-warn-underline = ${self.format-underline}
 
 label = %temperature-c%
 label-warn = %temperature-c%
-label-warn-foreground = ${colors.secondary}
+label-warn-foreground = ${tokyo.secondary}
 
 ramp-0 = 
 ramp-1 = 
 ramp-2 = 
-ramp-foreground = ${colors.foreground-alt}
+ramp-foreground = ${tokyo.foreground-alt}
 
 [module/powermenu]
 type = custom/menu
@@ -389,11 +405,11 @@ expand-right = true
 format-spacing = 1
 
 label-open = 
-label-open-foreground = ${colors.secondary}
+label-open-foreground = ${tokyo.secondary}
 label-close =  cancel
-label-close-foreground = ${colors.secondary}
+label-close-foreground = ${tokyo.secondary}
 label-separator = |
-label-separator-foreground = ${colors.foreground-alt}
+label-separator-foreground = ${tokyo.foreground-alt}
 
 menu-0-0 = reboot
 menu-0-0-exec = menu-open-1
