--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -111,7 +111,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: FuraCode Nerd Font Mono
+    family: FuraCode Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Retina
 
@@ -121,7 +121,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FuraCode Nerd Font Mono
+    family: FuraCode Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -133,7 +133,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FuraCode Nerd Font Mono
+    family: FuraCode Nerd Font
 
     # The `style` can be specified to pick a specific face.
     # style:
@@ -144,7 +144,7 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FuraCode Nerd Font Mono
+    family: FuraCode Nerd Font
     style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
