--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -5,7 +5,6 @@
 # Imports are loaded in order, skipping all missing files, with the importing
 # file being loaded last. If a field is already present in a previous import, it
 # will be replaced.
-#
 # All imports must either be absolute paths starting with `/`, or paths relative
 # to the user's home directory starting with `~/`.
 import:
@@ -111,9 +110,9 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: FuraCode Nerd Font
+    family: SauceCodePro Nerd Font
     # The `style` can be specified to pick a specific face.
-    style: Retina
+    style: Regular
 
   # Bold font face
   bold:
@@ -121,7 +120,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FuraCode Nerd Font
+    family: SauceCodePro Nerd Font
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -133,7 +132,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FuraCode Nerd Font
+    family: SauceCodePro Nerd Font
 
     # The `style` can be specified to pick a specific face.
     # style:
@@ -144,7 +143,7 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FuraCode Nerd Font
+    family: SauceCodePro Nerd Font
     style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
