--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -110,7 +110,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: SauceCodePro Nerd Font
+    family: FuraCode Nerd Font Mono
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -120,7 +120,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: SauceCodePro Nerd Font
+    family: FuraCode Nerd Font Mono
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -132,7 +132,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: SauceCodePro Nerd Font
+    family: FuraCode Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
     # style:
@@ -143,14 +143,14 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: SauceCodePro Nerd Font
+    family: FuraCode Nerd Font Mono
     style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
     # style: Bold Italic
 
   # Point size
-  size: 12.0
+  size: 10.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
