--- a/polybar/config
+++ b/polybar/config
@@ -64,7 +64,7 @@ font-2 = siji:pixelsize=10;1
 
 modules-left = bspwm i3
 modules-center = date
-modules-right = pulseaudio xkeyboard xbacklight memory cpu eth wlan temperature powermenu
+modules-right = pulseaudio battery backlight-acpi memory cpu eth wlan temperature powermenu
 
 tray-position = right
 tray-padding = 2
@@ -259,11 +259,11 @@ format-disconnected-background = ${tokyo.red}
 format-disconnected-foreground = ${tokyo.foreground-alt}
 
 ramp-signal-padding-right=1
-ramp-signal-0 = "VL"
-ramp-signal-1 = "L"
-ramp-signal-2 = "R"
-ramp-signal-3 = "G"
-ramp-signal-4 = "🔆 Laiza "
+ramp-signal-0 = "Péssimo"
+ramp-signal-1 = "Ruim"
+ramp-signal-2 = "Reg"
+ramp-signal-3 = "Bom"
+ramp-signal-4 = "🔆 Laiza " ; ótimo
 ramp-signal-foreground = ${tokyo.foreground-alt}
 ramp-signal-background = ${tokyo.background-alt}
 
@@ -297,7 +297,7 @@ label-disconnected-background = ${tokyo.background-alt}
 type = internal/date
 interval = 1
 
-date = " %d %b %Y"
+date = " %d/%m/%Y"
 date-alt = " %d %B %Y"
 
 time = %H:%M
@@ -318,7 +318,7 @@ format-volume = <label-volume>
 format-volume-prefix = 
 format-volume-prefix-padding = 1
 format-volume-prefix-foreground = ${tokyo.foreground-alt}
-format-volume-prefix-background = ${tokyo.yellow}
+format-volume-prefix-background = ${tokyo.red}
 label-volume = %percentage:3%%
 label-volume-padding = 1
 label-volume-foreground = ${tokyo.foreground-alt}
@@ -364,33 +364,44 @@ bar-volume-empty-foreground = ${tokyo.foreground}
 
 [module/battery]
 type = internal/battery
-battery = BAT0
+battery = BAT1
 adapter = AC
-full-at = 98
+full-at = 100
 
-format-charging = <animation-charging> <label-charging>
+format-charging = <animation-charging><label-charging>
 
-format-discharging = <animation-discharging> <label-discharging>
+format-discharging = <animation-discharging><label-discharging>
 
 format-full-prefix = " "
-format-full-prefix-foreground = ${tokyo.foreground}
+format-full-prefix-foreground = ${tokyo.foreground-alt}
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
-ramp-capacity-foreground = ${tokyo.foreground}
+ramp-capacity-foreground = ${tokyo.foreground-alt}
 
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
-animation-charging-foreground = ${tokyo.foreground}
+animation-charging-padding = 1
 animation-charging-framerate = 750
+animation-charging-background = ${tokyo.yellow}
+animation-charging-foreground = ${tokyo.foreground-alt}
 
 animation-discharging-0 = 
 animation-discharging-1 = 
 animation-discharging-2 = 
-animation-discharging-foreground = ${tokyo.foreground}
 animation-discharging-framerate = 750
+animation-discharging-background = ${tokyo.yellow}
+animation-discharging-foreground = ${tokyo.foreground-alt}
+
+label-charging-foreground = ${tokyo.foreground-alt}
+label-charging-background = ${tokyo.background-alt}
+label-charging-padding = 1
+
+label-discharging-foreground = ${tokyo.foreground-alt}
+label-discharging-background = ${tokyo.background-alt}
+label-discharging-padding = 1
 
 [module/temperature]
 type = internal/temperature
