--- a/polybar/config
+++ b/polybar/config
@@ -71,7 +71,7 @@ tray-padding = 2
 locale= pt_BR.UTF-8
 ;tray-background = #0063ff
 
-;wm-restack = bspwm
+wm-restack = bspwm
 ;wm-restack = i3
 
 ;override-redirect = true
