--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -120,7 +120,6 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FuraCode Nerd Font Mono
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -132,10 +131,9 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FuraCode Nerd Font Mono
 
     # The `style` can be specified to pick a specific face.
-    # style:
+    style: italic
 
   # Bold italic font face
   bold_italics:
@@ -143,7 +141,6 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: FuraCode Nerd Font Mono
     style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
