--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -45,8 +45,8 @@ window:
   # Blank space added around the window in pixels. This padding is scaled
   # by DPI and the specified value is always added at both opposing sides.
   padding:
-    x: 0
-    y: 0
+    x: 2
+    y: 2
 
   # Spread additional padding evenly around the terminal content.
   dynamic_padding: true
@@ -110,7 +110,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Fantasque Sans Mono Nerd Font
+    family: Iosevka
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -120,7 +120,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Fantasque Sans Mono Nerd Font
+    family: Iosevka
     style: Bold
 
     # The `style` can be specified to pick a specific face.
@@ -134,7 +134,7 @@ font:
     # value specified for the normal font.
 
     # The `style` can be specified to pick a specific face.
-    family: Fantasque Sans Mono Nerd Font
+    family: Iosevka
     style: Italic
 
   # Bold italic font face
@@ -144,14 +144,14 @@ font:
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
     #
-    family: Fantasque Sans Mono Nerd Font
+    family: Iosevka
     style: Bold Italic
 
     # The `style` can be specified to pick a specific face.
     # style: Bold Italic
 
   # Point size
-  size: 12.0
+  size: 15.0
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
