Make kitty respect my cursor

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -168,7 +168,7 @@ cursor #cccccc
 
 #: Default cursor color
 
-cursor_text_color #111111
+cursor_text_color background
 
 #: Choose the color of text under the cursor. If you want it rendered
 #: with the background color of the cell underneath instead, use the
@@ -188,7 +188,7 @@ cursor_shape block
 
 #: Defines the thickness of the underline cursor (in pts)
 
-cursor_blink_interval 0
+cursor_blink_interval -1
 
 #: The interval (in seconds) at which to blink the cursor. Set to zero
 #: to disable blinking. Negative values mean use system default. Note
@@ -1510,3 +1510,4 @@ map kitty_mod+f6 debug_config
 #: }}}
 #
 include onedark.conf
+shell_integration no-cursor
