Fix my git config

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	email = jpedro@gmail.com
-	name = João Pedro
+	email = jpedro1580@gmail.com
+	name = João Pedro Gomes
 [init]
 	defaultBranch = main
